@@ -71,6 +71,12 @@ func RunTorBrowser(cfg *config.Config, manif *config.Manifest, tor *tor.Tor) (pr
 	h.fakeDbus = true
 	h.mountProc = false
 
+	// Dear Ubuntu.  While I realize that this may be a hard concept to grasp,
+	// if `openat()` returns -1 (ENOENT), the correct thing to do is NOT spin
+	// endlessly calling `read()` in a tight loop (ignoring the -1/EBADFD)
+	// status.
+	h.file("/proc/self/environ", []byte{})
+
 	// Gtk+ and PulseAudio.
 	hasAdwaita := h.appendGtk2Theme()
 	h.roBind("/usr/share/icons/hicolor", "/usr/share/icons/hicolor", true)
